# final-project-RubenYoo

./: gather_explanations_to_json.py  gpt-explainer.py  gpt_explainer.py  main.py  powerpoint_parser.py
Client/: pyhton_client.py  pyproject.toml  python_client.py  status.py
Client/gptExplainerClient.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
Client/gpt_explainer_client.egg-info/: PKG-INFO  SOURCES.txt
Database/: database_orm.py  orm.py
Database/db/: mydatabase.db
Gpt_explainer/: main.py
Gpt_explainer/Explainer/: gpt_explainer.py
Test/: system_test.py  test_system.py
Utils/: gather_explanations_to_json.py
Web_api/: app.py
db/: database.db
