[project]
name = "gptExplainerClient"
version = "0.0.1"
description = "API to talk with the GPT-Explainer"
dependencies = [
    "requests",
    "argparse",
    'importlib-metadata; python_version<"3.8"',
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = [""]
namespaces = false